# biztonsag

./: .clang-format  CMakeLists.txt  CODE_OF_CONDUCT.rst  COPYING  README.rst  doxyfile.in
examples/: CMakeLists.txt  area.cpp  safe_string.cpp  temp.cpp
include/biztonsag/: arithmetic.hpp  bitop.hpp  comparable.hpp  create_macro.hpp  divides.hpp  incr.hpp  logical.hpp  minus.hpp  mixins.hpp  orderable.hpp  plus.hpp  times.hpp  traits.hpp  wrapped.hpp
test/: CMakeLists.txt  bitop_test.cpp  comparable_test.cpp  ctor_test.cpp  divides_test.cpp  increment_test.cpp  logical_test.cpp  minus_test.cpp  orderable_test.cpp  plus_test.cpp  times_test.cpp  wrapped_test.cpp
